--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -435,19 +435,36 @@ a:hover {
 /*******************************************/
 
 .dnd-card {
-  background: #F9F9F9;
+  background: #f9f9f9;
   border-radius: 8px;
-  height: 52px;
+}
+
+.child-card {
+  background: rgb(255, 255, 255);
+  border-radius: 4px;
+  border: 1px solid #f0f2f5;
+  margin: 10px;
+  padding: 10px;
 }
 
 .add-new {
-  background-color: #FBFBFC;
+  background-color: #fbfbfc;
   height: 55px;
   font-size: 14px;
   font-weight: bold;
-  color: #8854D0;
+  color: #8854d0;
 
   &:hover {
-    background: darken(#FBFBFC, 4%)
+    background: darken(#fbfbfc, 4%);
   }
+}
+
+.lecture-input {
+  border: 1px solid transparent;
+  padding-left: 20px;
+  background: #f0f2f5;
+  border-radius: 4px;
+  height: 35px;
+  width: 100%;
+  outline: none;
 }
