--- a/src/assets/sass/accordion.scss
+++ b/src/assets/sass/accordion.scss
@@ -5,7 +5,7 @@
   background-color: #fff;
   max-width: 30rem;
   overflow: hidden;
-  box-shadow: 0px 0px 4px rgba(5, 5, 5, 0.08);
+  box-shadow: 0 2px 4px 0 rgba(14,30,37,.12);
   border-radius: 8px;
 }
 .accordion-list__item + .accordion-list__item {
