--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -29,8 +29,12 @@
   margin-bottom: 70px;
 }
 
+::placeholder {
+  font-family: "Product Sans Regular";
+}
+
 .shadows {
-  box-shadow: 0px 0px 4px rgba(5, 5, 5, 0.08);
+  box-shadow: 0 2px 4px 0 rgba(14, 30, 37, 0.12);
 }
 
 body {
@@ -55,7 +59,8 @@ p,
 small,
 label,
 button,
-span {
+span,
+input {
   font-family: "Product Sans Regular";
 }
 
@@ -200,11 +205,7 @@ span {
 }
 
 .titlebar {
-  margin-left: 80px;
-  padding-left: 20px;
-  border-radius: 4px;
-  height: 35px;
-  outline: none;
+  margin-left: 50px;
 }
 
 /********************************************/
@@ -306,7 +307,7 @@ span {
 
 .card {
   background: #ffffff;
-  box-shadow: 0px 0px 4px rgba(5, 5, 5, 0.08);
+  box-shadow: 0 2px 4px 0 rgba(14, 30, 37, 0.12);
   border-radius: 8px;
   border: none;
 }
