--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,7 +13,7 @@
   font-style: normal;
   font-weight: normal;
   src: local("Product Sans Medium"),
-    url("../ProductSans-Medium.woff") format("woff");
+    url("../fonts/ProductSans-Medium.woff") format("woff");
 }
 
 @font-face {
@@ -21,7 +21,7 @@
   font-style: normal;
   font-weight: normal;
   src: local("Product Sans Regular"),
-    url("../ProductSans-Regular.woff") format("woff");
+    url("../fonts/ProductSans-Regular.woff") format("woff");
 }
 
 .main-content {
@@ -64,7 +64,8 @@ input {
   font-family: "Product Sans Regular";
 }
 
-input, textarea {
+input,
+textarea {
   transition-duration: 0.3s;
   &:focus {
     box-shadow: 0 2px 4px 0 rgba(14, 30, 37, 0.12);
@@ -217,6 +218,24 @@ input, textarea {
 
 /********************************************/
 
+.loading {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -30px;
+  margin-left: -20px;
+  border: 2px solid #8854d0;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  width: 13px;
+  height: 13px;
+  animation: spin 0.4s linear infinite;
+}
+
 .loader {
   display: inline-block;
   margin-top: 6px;
@@ -357,9 +376,8 @@ input, textarea {
   }
 
   p {
-    color: #8a8c90;
+    color: #a0a0a0;
     font-weight: normal;
-    display: -webkit-box;
     word-wrap: break-word;
     overflow: hidden;
     max-height: 1.2em;
