--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./dropdown.scss";
-@import "./accordion.scss";
-@import "./accordion2.scss";
+@import "./accordionCourse.scss";
+@import "./accordionLearn.scss";
 
 @media (min-width: 1200px) {
   .container {
